tests/baselines/reference/declarationEmitNoNonRequiredParens.errors.txt
declarationEmitNoNonRequiredParens.ts(7,21): error TS2352: Conversion of type 'null' to type 'Test[]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.


==== declarationEmitNoNonRequiredParens.ts (1 errors) ====
    export enum Test {
        A, B, C
    }
    
    export type TestType = typeof Test;
    
    export const bar = (null as TestType[Extract<keyof TestType, string>][]);
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Conversion of type 'null' to type 'Test[]' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.